
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_4__ {int* table; int* trans; } ;
typedef TYPE_1__ UZLIB_TREE ;



__attribute__((used)) static void build_fixed_trees (UZLIB_TREE *lt, UZLIB_TREE *dt) {
  int i;


  for (i = 0; i < 7; ++i) lt->table[i] = 0;

  lt->table[7] = 24;
  lt->table[8] = 152;
  lt->table[9] = 112;

  for (i = 0; i < 24; ++i) lt->trans[i] = 256 + i;
  for (i = 0; i < 144; ++i) lt->trans[24 + i] = i;
  for (i = 0; i < 8; ++i) lt->trans[24 + 144 + i] = 280 + i;
  for (i = 0; i < 112; ++i) lt->trans[24 + 144 + 8 + i] = 144 + i;


  for (i = 0; i < 5; ++i) dt->table[i] = 0;
  dt->table[5] = 32;

  for (i = 0; i < 32; ++i) dt->trans[i] = i;
}
